# docker-workshop

./: .gitignore  README.md  elect\  notebook.ipynb  pyproject.toml
pipeline/: Dockerfile  ingest_data.py  notebook.ipynb  pyproject.toml  zones.ipynb
pipeline/.ipynb_checkpoints/: notebook-checkpoint.ipynb
terraform/: .terraform.lock.hcl  main.tf
